--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "express-validator": "^6.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/GabrieleVir/repository.git"
   }
 }
