--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phonebook",
   "version": "1.0.0",
-  "licence": "Apache-2.0",
+  "license": "Apache-2.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
