--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3": "^2.1.0",
+    "-": "^0.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "jquery": "1.9.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -13,7 +17,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "typescript": "^4.1.0-dev.20200820"
   },
   "scripts": {
     "start": "react-scripts start",
